fixed button spacing

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -81,7 +81,6 @@ li {
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  align-items: center;
   padding: 0 1em;
 }
 
